# claimapp/claimapi/main.go
@@ -17,23 +17,23 @@ import (
 // @contact.email parameswaribala@gmail.com
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
-// @host localhost:7074
+// @host localhost:7072
 // @BasePath /
 func main() {
 
 	mux := http.NewServeMux()
 	mux.HandleFunc("GET /claims/v1.0", store.GetClaims)
 	mux.HandleFunc("POST /claims/v1.0", store.SaveClaim)
-	mux.HandleFunc("GET /claims/v1.0/{id}", store.GetClaimByID)
-	mux.HandleFunc("PUT /claims/v1.0/{id}", store.UpdateClaim)
-	mux.HandleFunc("DELETE /claims/v1.0/{id}", store.DeleteClaim)
+	mux.HandleFunc("GET /claims/v1.0/{claimid}", store.GetClaimByID)
+	mux.HandleFunc("PUT /claims/v1.0/{claimid}", store.UpdateClaim)
+	mux.HandleFunc("DELETE /claims/v1.0/{claimid}", store.DeleteClaim)
 	// Swagger UI served at /swagger/
 	mux.Handle("/swagger/", httpSwagger.WrapHandler)
 
 	// Your own handlers
 	// mux.HandleFunc("/claims", claimsHandler)
 
-	log.Println("Server running at http://localhost:7074")
-	log.Fatal(http.ListenAndServe(":7074", mux))
+	log.Println("Server running at http://localhost:7072")
+	log.Fatal(http.ListenAndServe(":7072", mux))
 
 }
